tests/fixtures/invalid/duplicate_field.etcm
spec BadConfig:
  retries: int
  retries: int
